feat: Add bootstrap, create header and footer

--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -1,3 +1,6 @@
-<footer>
-    Footer
+<footer class="card text-center">
+  <div class="card-body">
+    <a href="https://github.com/nchanh" class="btn btn-primary mb-3">nchanh</a> <br/>
+      <span class="card-title">&copy; 2022 Nguyen Chanh</span>
+  </div>
 </footer>
