chore: Rename project

--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Hi NodeJS</a>
+  <a class="navbar-brand" href="#">BlogxNode</a>
   <button
     class="navbar-toggler"
     type="button"
