feat: Form default behavior, Post method

--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -10,7 +10,9 @@
 
 <body>
   <div class="app">
-    {{> header }}
+    <div class="mb-4">
+      {{> header }}
+    </div>
 
     <div class="container">
       {{{body}}}
