--- a/src/resource/views/search.hbs
+++ b/src/resource/views/search.hbs
@@ -1,1 +1,15 @@
-search
+<div class="section-search">
+  <form action="" method="POST">
+    <div class="form-group">
+      <label for="search-input-keywork">Keyword:</label>
+      <input
+        type="text"
+        class="form-control"
+        name="q"
+        id="search-input-keywork"
+        placeholder="Input keyword..."
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
